<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <!-- Nested Views Go Here -->

    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Score"
            android:textSize="24sp"></TextView>

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="24sp"
            tools:text="#">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        tools:text="Question text will display here"></TextView>

    <LinearLayout
        android:id="@+id/TF_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:text="@string/True" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:text="@string/False" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MC_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/A"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary"
            android:text="A"
            android:layout_gravity="left"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/B"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary"
            android:text="B"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/MC_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/C"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary"
            android:text="C"
            android:layout_gravity="left"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/D"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary"
            android:text="D"
            android:layout_gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FB_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/fb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/colorAccent"
            android:text="Submit" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#1BC8D8"
            android:text="@string/Previous" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#1BC8D8"
            android:text="@string/Next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cheat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/colorAccent"
            android:text="@string/cheat_button_text" />

    </LinearLayout>


</LinearLayout>